# libraries-malcontent-demo

./: .gitignore  Dockerfile  README.md  init-ultralytics.py  main.py  pyproject.toml
.github/chainguard/: build.sts.yaml  libcheck-sts-yaml.bak  libcheck.sts.yaml  scanmalware.sts.yaml  setup.sts.yaml
.github/workflows/: build-and-release.yaml  build.yaml  generate-sarif.yaml  rescan-with-cgr-libraries.yaml  scan-malware.yaml  scanmalware.yaml  setup.yaml
scans/: cg-libraries-ultralytics-demo.sh  ultralytics-malcontent-diff-v8.3.40-v8.3.41.json
src/: Dockerfile  __init__.py  pyproject.toml  ultralytics
src/ultralytics/ultralytics-8.3.40.dist-info/: METADATA  RECORD
src/ultralytics/ultralytics-8.3.40.dist-info/sboms/: sbom.spdx.json
