[tool.poetry]
name = "your-project"
version = "0.1.0"
description = ""
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
ultralytics = { path = "app/src/malcontent-samples/python/2024.ultralytics/v8.3.40", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
