[tool.poetry]
name = "libraries-ultralytics-attack-demo"
version = "0.1.0"
description = "Demo project using ultralytics for malware detection"
authors = ["John Osborne <josborne@chainguard.dev>"]

[tool.poetry.dependencies]
python = ">=3.8"
ultralytics = { path = "./ultralytics", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
